--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,20 +12,19 @@ jobs:
       contents: write # これがないとリリースを作成できない
     steps:
       # チェックアウト
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Changelog を正しく動作させるために必要
 
       # Go をセットアップ
-      - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v3
         with:
           go-version-file: go.mod
           cache: true
 
       # リリース
-      - uses: goreleaser/goreleaser-action@v6
+      - uses: goreleaser/goreleaser-action@v4
         with:
-          args: release
+          args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 自動で生成されるシークレット
